# forge

./: .gitignore
server/: Makefile  README.md  pyproject.toml
server/forge/: protocol_export.py
server/forge/api/: app.py  schemas.py
server/forge/engine/: actor.py  bus.py  events.py  fileindex.py  indexservice.py  manager.py  memindex.py  memory.py  projection.py  scheduler.py  skills.py  sysprompt.py  terminal.py  workspace.py
server/forge/llm/: base.py  embeddings.py  fake.py  openai_client.py
server/forge/store/: changesets.py  config.py  eventlog.py  projects.py  rewind_intent.py  subagent_grades.py  workspace_activity.py  workspace_checkpoints.py
server/forge/tools/: base.py  bash.py  file_search.py  files_read.py  files_write.py  images.py  (+11 more)
server/tests/: test_actor.py  test_api.py  test_api_extras.py  test_approvals.py  test_bash_tool.py  test_bus_scheduler.py  test_compaction.py  test_config.py  test_embeddings.py  test_eventlog.py  test_events.py  test_fake_llm.py  test_file_search.py  test_fileindex.py  test_fs_api.py  test_images.py  test_indexservice.py  test_manager.py  test_memindex.py  test_memory_tools.py  test_openai_client.py  test_pdf_tool.py  test_plan_mode.py  test_project_memory.py  test_projection.py  test_projects.py  test_read_tools.py  test_rewind.py  test_rewind_concurrency.py  test_skills_sysprompt.py  test_stale_provenance.py  test_subagent_api.py  test_subagent_grades.py  test_subagents.py  test_terminal_actor.py  test_terminal_api.py  test_terminal_runtime.py  test_terminal_tool.py  test_tree_reconcile.py  test_web_tools.py  (+3 more)
(+156 files in other folders)
