[project]
name = "forge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.60",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pypdf>=5",
    "pdfplumber>=0.11",
    "pypdfium2>=4",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27", "httpx2>=2", "ruff>=0.6"]
# Libraries the shipped skills (xlsx, pdf) rely on, so agents never have to
# pip install them mid-task. Pure-Python wheels only; heavy/native tools
# (docling, weasyprint system libs, typst, soffice, qpdf, ocrmypdf, pandoc)
# stay on-demand.
skills = [
    "openpyxl>=3.1",
    "pandas>=2.2",
    "xlsxwriter>=3.2",
    "python-calamine>=0.2",
    "xlrd>=2.0",
    "reportlab>=4.2",
    "markdown>=3.7",
    "pillow>=10",
]

[tool.uv]
default-groups = ["dev", "skills"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
